tests/tooling/fixtures/native/recovery/positive/message_send_nil_bound_identifier_pre_reassignment_elision.objc3
// Positive fixture: nil-bound identifier send-site before reassignment is flow-sensitively elided.
module MessageSendNilBoundIdentifierPreReassignmentElision;

fn main() {
  let receiver = nil;
  let sent = [receiver ping];
  receiver = 1;
  return sent + 16;
}
