tests/tooling/fixtures/native/recovery/negative/negative_message_nil_bound_identifier_reassigned_function.objc3
// Negative fixture: mutable nil-bound identifier reassignment to function value is invalid.
// Expected diagnostic code(s): O3S206.
module NegativeMessageNilBoundIdentifierReassignedFunction;

fn payload() -> i32 {
  return 1;
}

fn main() -> i32 {
  let receiver = nil;
  receiver = payload;
  return [receiver ping];
}
